--- a/SecretSanta/src/SecretSanta.Web/Views/Home/Index.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Home/Index.cshtml
@@ -1,2 +1,2 @@
 ﻿<p>Welcome to your secret santa app</p>
-<a asp-action="Index" asp-controller="User">Secret Santa</a>
+<a asp-action="Index" asp-controller="Users">Secret Santa</a>
