--- a/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
     <nav>
         <ul>
             <li><a asp-controller="Home">Home</a></li>
-            <li><a asp-controller="User">User</a></li>
-            <li><a asp-controller="Gift">Gift</a></li>
-            <li><a asp-controller="Group">Group</a></li>
+            <li><a asp-controller="Users">Users</a></li>
+            <li><a asp-controller="Gifts">Gifts</a></li>
+            <li><a asp-controller="Groups">Groups</a></li>
         </ul>
     </nav>
 </header>
