--- a/SecretSanta/src/SecretSanta.Web/Views/Gifts/Create.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Gifts/Create.cshtml
@@ -1,31 +1,34 @@
-﻿@model UserInput
-
-@{
-    Layout = Layout;
-}
+﻿@model GiftInput
 
 <!DOCTYPE html>
 <form asp-action="Create">
     <div asp-validation-summary="ModelOnly"></div>
     <div class="field">
-        <label class="label" asp-for="FirstName"></label>
+        <label class="label" asp-for="Title"></label>
         <div class="control">
-            <input class="input" type="text" asp-for="FirstName" />
-            <span asp-validation-for="FirstName"></span>
+            <input class="input" type="text" asp-for="Title" />
+            <span asp-validation-for="Title"></span>
         </div>
     </div>
     <div class="field">
-        <label class="label" asp-for="LastName"></label>
+        <label class="label" asp-for="Description"></label>
         <div class="control">
-            <input class="input" type="text" asp-for="LastName" />
-            <span asp-validation-for="LastName"></span>
+            <input class="input" type="text" asp-for="Description" />
+            <span asp-validation-for="Description"></span>
         </div>
     </div>
     <div class="field">
-        <label class="label" asp-for="LastName"></label>
+        <label class="label" asp-for="Url"></label>
         <div class="control">
-            <input class="input" type="text" asp-for="SantaId" />
-            <span asp-validation-for="LastName"></span>
+            <input class="input" type="text" asp-for="Url" />
+            <span asp-validation-for="Url"></span>
+        </div>
+    </div>
+    <div class="field">
+        <label class="label" asp-for="UserId"></label>
+        <div class="control">
+            <input class="input" type="text" asp-for="UserId" />
+            <span asp-validation-for="UserId"></span>
         </div>
     </div>
     <div class="form-group">
