--- a/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
     <!-- Stylesheets -->
     
-    <link href="~/css/main.857b95468e6caf0cc988.css" rel="stylesheet" />
+    <link href="~/css/main.2000b0f8f98ea35d6e53.css" rel="stylesheet" />
     
     <!-- End Stylesheets -->
     <style>
@@ -16,20 +16,26 @@
     </style>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-            <li><a asp-controller="Users" asp-action="Index">Users</a></li>
-            <li><a asp-controller="Groups" asp-action="Index">Groups</a></li>
-            <li><a asp-controller="Gifts" asp-action="Index">Gifts</a></li>
-        </ul>
+    <nav class="navbar" role="navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" asp-controller="Home" asp-action="Index">Home</a>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" asp-controller="Users" asp-action="Index">Users</a>
+                <a class="navbar-item" asp-controller="Groups" asp-action="Index">Groups</a>
+                <a class="navbar-item" asp-controller="Gifts" asp-action="Index">Gifts</a>
+            </div>
+        </div>
     </nav>
-    <div>
+<section class="section">
+    <div class="content">
         @RenderBody()
     </div>
+</section>
     <!-- Scripts -->
     
-    <script src="~/js/main.857b95468e6caf0cc988.js"></script>
+    <script src="~/js/main.2000b0f8f98ea35d6e53.js"></script>
     
     <!-- End Scripts -->
     @RenderSection("scripts", required: false)
